-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b137
-
Not verified
2016-07-13T04:16:26.22] Symbol: 'javasoft/sqe/javatest/Status' count -32768# To suppress the following error report, specify this argument
[2016-07-13T04:16:26.22] # after -XX: or in .hotspotrc: SuppressErrorAt=/symbol.cpp:247
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # A fatal error has been detected by the Java Runtime Environment:
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # Internal Error (/scratch/opt/jprt/T/P1/205031.tkrodrig/s/hotspot/src/share/vm/oops/symbol.cpp:247), pid=29658, tid=29775
[2016-07-13T04:16:26.22] # assert(false) failed: reference count underflow for symbol
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-07-12-205031.tkrodrig.8159368)
[2016-07-13T04:16:26.22] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-07-12-205031.tkrodrig.8159368, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
[2016-07-13T04:16:26.22] # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /scratch/home/aginfra/sandbox/results/ResultDir/sysdictj9003/core.29658)
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # An error report file with more information is saved as:
[2016-07-13T04:16:26.22] # /scratch/home/aginfra/sandbox/results/ResultDir/sysdictj9003/hs_err_pid29658.log
[2016-07-13T04:16:26.27] #
[2016-07-13T04:16:26.27] # If you would like to submit a bug report, please visit:
[2016-07-13T04:16:26.27] # http://bugreport.java.com/bugreport/crash.jsp
[2016-07-13T04:16:26.27] #
Current thread (0x00007fd3e07f8000): JavaThread "nsk.sysdict.share.JCKTest$Loader@7cd62f43" [_thread_in_vm, id=29775, stack(0x00007fd23e7e8000,0x00007fd23e8e9000)]
Stack: [0x00007fd23e7e8000,0x00007fd23e8e9000], sp=0x00007fd23e8e4b10, free space=1010k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x169ed42] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
V [libjvm.so+0x169fabf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xa6714d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x1595dbe] Symbol::decrement_refcount()+0x10e
V [libjvm.so+0x14f8055] SignatureStream::~SignatureStream()+0x45
V [libjvm.so+0x16699f3] ClassVerifier::verify_invoke_instructions(RawBytecodeStream*, unsigned int, StackMapFrame*, bool, bool*, VerificationType, constantPoolHandle const&, StackMapTable*, Thread*)+0x4f3
V [libjvm.so+0x166bb20] ClassVerifier::verify_method(methodHandle const&, Thread*)+0x1030
V [libjvm.so+0x166ee2e] ClassVerifier::verify_class(Thread*)+0x19e
V [libjvm.so+0x166f53c] Verifier::verify(instanceKlassHandle, Verifier::Mode, bool, Thread*)+0x3cc
V [libjvm.so+0xda2c8e] InstanceKlass::verify_code(instanceKlassHandle, bool, Thread*)+0x3e
V [libjvm.so+0xdaaa6c] InstanceKlass::link_class_impl(instanceKlassHandle, bool, Thread*)+0x51c
V [libjvm.so+0xdaca3a] InstanceKlass::initialize_impl(instanceKlassHandle, Thread*)+0xca
V [libjvm.so+0xdacb55] InstanceKlass::initialize(Thread*)+0xc5
V [libjvm.so+0xf30dc2] find_class_from_class_loader(JNIEnv_*, Symbol*, unsigned char, Handle, Handle, unsigned char, Thread*)+0x122
V [libjvm.so+0xf38492] JVM_FindClassFromCaller+0x3c2
C [libjava.so+0xc970] Java_java_lang_Class_forName0+0x110
J 673 java.lang.Class.forName0(Ljava/lang/String;ZLjava/lang/ClassLoader;Ljava/lang/Class;)Ljava/lang/Class; java.base@9-internal (0 bytes) @ 0x00007fd3cf6fb3fb [0x00007fd3cf6fb280+0x000000000000017b]
J 997 C2 java.lang.Class.forName(Ljava/lang/String;ZLjava/lang/ClassLoader;)Ljava/lang/Class; java.base@9-internal (53 bytes) @ 0x00007fd3cf7f97e8 [0x00007fd3cf7f97c0+0x0000000000000028]
j nsk.sysdict.share.JCKTest$Loader.load(ILnsk/share/sysdict/JCKRuntimeTestCollector$JCKSuite;Lnsk/share/test/ExecutionController;)[Ljava/lang/Class;+255
j nsk.sysdict.share.JCKTest$Loader.run()V+62
j nsk.share.runner.ThreadsRunner$ManagedThread.run()V+57
v ~StubRoutines::call_stub
V [libjvm.so+0xdf5060] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x950
V [libjvm.so+0xdf24a8] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x448
V [libjvm.so+0xdf272f] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xbf
V [libjvm.so+0xf2d4ee] thread_entry(JavaThread*, Thread*)+0xae
V [libjvm.so+0x1603fce] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x160425e] JavaThread::run()+0x1ce
V [libjvm.so+0x1346ba2] thread_native_entry(Thread*)+0x112
C [libpthread.so.0+0x7dc5] start_thread+0xc5
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
J 673 java.lang.Class.forName0(Ljava/lang/String;ZLjava/lang/ClassLoader;Ljava/lang/Class;)Ljava/lang/Class; java.base@9-internal (0 bytes) @ 0x00007fd3cf6fb381 [0x00007fd3cf6fb280+0x0000000000000101]
J 997 C2 java.lang.Class.forName(Ljava/lang/String;ZLjava/lang/ClassLoader;)Ljava/lang/Class; java.base@9-internal (53 bytes) @ 0x00007fd3cf7f97e8 [0x00007fd3cf7f97c0+0x0000000000000028]
j nsk.sysdict.share.JCKTest$Loader.load(ILnsk/share/sysdict/JCKRuntimeTestCollector$JCKSuite;Lnsk/share/test/ExecutionController;)[Ljava/lang/Class;+255
j nsk.sysdict.share.JCKTest$Loader.run()V+62
j nsk.share.runner.ThreadsRunner$ManagedThread.run()V+57
v ~StubRoutines::call_stub
[2016-07-13T04:16:26.22] # after -XX: or in .hotspotrc: SuppressErrorAt=/symbol.cpp:247
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # A fatal error has been detected by the Java Runtime Environment:
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # Internal Error (/scratch/opt/jprt/T/P1/205031.tkrodrig/s/hotspot/src/share/vm/oops/symbol.cpp:247), pid=29658, tid=29775
[2016-07-13T04:16:26.22] # assert(false) failed: reference count underflow for symbol
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-07-12-205031.tkrodrig.8159368)
[2016-07-13T04:16:26.22] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-07-12-205031.tkrodrig.8159368, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
[2016-07-13T04:16:26.22] # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /scratch/home/aginfra/sandbox/results/ResultDir/sysdictj9003/core.29658)
[2016-07-13T04:16:26.22] #
[2016-07-13T04:16:26.22] # An error report file with more information is saved as:
[2016-07-13T04:16:26.22] # /scratch/home/aginfra/sandbox/results/ResultDir/sysdictj9003/hs_err_pid29658.log
[2016-07-13T04:16:26.27] #
[2016-07-13T04:16:26.27] # If you would like to submit a bug report, please visit:
[2016-07-13T04:16:26.27] # http://bugreport.java.com/bugreport/crash.jsp
[2016-07-13T04:16:26.27] #
Current thread (0x00007fd3e07f8000): JavaThread "nsk.sysdict.share.JCKTest$Loader@7cd62f43" [_thread_in_vm, id=29775, stack(0x00007fd23e7e8000,0x00007fd23e8e9000)]
Stack: [0x00007fd23e7e8000,0x00007fd23e8e9000], sp=0x00007fd23e8e4b10, free space=1010k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x169ed42] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
V [libjvm.so+0x169fabf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xa6714d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x1595dbe] Symbol::decrement_refcount()+0x10e
V [libjvm.so+0x14f8055] SignatureStream::~SignatureStream()+0x45
V [libjvm.so+0x16699f3] ClassVerifier::verify_invoke_instructions(RawBytecodeStream*, unsigned int, StackMapFrame*, bool, bool*, VerificationType, constantPoolHandle const&, StackMapTable*, Thread*)+0x4f3
V [libjvm.so+0x166bb20] ClassVerifier::verify_method(methodHandle const&, Thread*)+0x1030
V [libjvm.so+0x166ee2e] ClassVerifier::verify_class(Thread*)+0x19e
V [libjvm.so+0x166f53c] Verifier::verify(instanceKlassHandle, Verifier::Mode, bool, Thread*)+0x3cc
V [libjvm.so+0xda2c8e] InstanceKlass::verify_code(instanceKlassHandle, bool, Thread*)+0x3e
V [libjvm.so+0xdaaa6c] InstanceKlass::link_class_impl(instanceKlassHandle, bool, Thread*)+0x51c
V [libjvm.so+0xdaca3a] InstanceKlass::initialize_impl(instanceKlassHandle, Thread*)+0xca
V [libjvm.so+0xdacb55] InstanceKlass::initialize(Thread*)+0xc5
V [libjvm.so+0xf30dc2] find_class_from_class_loader(JNIEnv_*, Symbol*, unsigned char, Handle, Handle, unsigned char, Thread*)+0x122
V [libjvm.so+0xf38492] JVM_FindClassFromCaller+0x3c2
C [libjava.so+0xc970] Java_java_lang_Class_forName0+0x110
J 673 java.lang.Class.forName0(Ljava/lang/String;ZLjava/lang/ClassLoader;Ljava/lang/Class;)Ljava/lang/Class; java.base@9-internal (0 bytes) @ 0x00007fd3cf6fb3fb [0x00007fd3cf6fb280+0x000000000000017b]
J 997 C2 java.lang.Class.forName(Ljava/lang/String;ZLjava/lang/ClassLoader;)Ljava/lang/Class; java.base@9-internal (53 bytes) @ 0x00007fd3cf7f97e8 [0x00007fd3cf7f97c0+0x0000000000000028]
j nsk.sysdict.share.JCKTest$Loader.load(ILnsk/share/sysdict/JCKRuntimeTestCollector$JCKSuite;Lnsk/share/test/ExecutionController;)[Ljava/lang/Class;+255
j nsk.sysdict.share.JCKTest$Loader.run()V+62
j nsk.share.runner.ThreadsRunner$ManagedThread.run()V+57
v ~StubRoutines::call_stub
V [libjvm.so+0xdf5060] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x950
V [libjvm.so+0xdf24a8] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x448
V [libjvm.so+0xdf272f] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xbf
V [libjvm.so+0xf2d4ee] thread_entry(JavaThread*, Thread*)+0xae
V [libjvm.so+0x1603fce] JavaThread::thread_main_inner()+0x22e
V [libjvm.so+0x160425e] JavaThread::run()+0x1ce
V [libjvm.so+0x1346ba2] thread_native_entry(Thread*)+0x112
C [libpthread.so.0+0x7dc5] start_thread+0xc5
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
J 673 java.lang.Class.forName0(Ljava/lang/String;ZLjava/lang/ClassLoader;Ljava/lang/Class;)Ljava/lang/Class; java.base@9-internal (0 bytes) @ 0x00007fd3cf6fb381 [0x00007fd3cf6fb280+0x0000000000000101]
J 997 C2 java.lang.Class.forName(Ljava/lang/String;ZLjava/lang/ClassLoader;)Ljava/lang/Class; java.base@9-internal (53 bytes) @ 0x00007fd3cf7f97e8 [0x00007fd3cf7f97c0+0x0000000000000028]
j nsk.sysdict.share.JCKTest$Loader.load(ILnsk/share/sysdict/JCKRuntimeTestCollector$JCKSuite;Lnsk/share/test/ExecutionController;)[Ljava/lang/Class;+255
j nsk.sysdict.share.JCKTest$Loader.run()V+62
j nsk.share.runner.ThreadsRunner$ManagedThread.run()V+57
v ~StubRoutines::call_stub