8161280: assert failed: reference count underflow for symbol

Reviewed-by: dholmes, coleenp, kbarrett